<resources>
    <string name="app_name">PuppyPal</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_a_pet">Edit a Pet</string>
    <string name="add_a_pet">Add a Pet</string>
    <string name="add_record">Add Record</string>
    <string name="edit_an_assistant">Edit an Assistant</string>
    <string name="add_an_assistant">Add an Assistant</string>
    <string name="name">Name: (*)</string>
    <string name="age">Age: (*)</string>
    <string name="phone_number">Phone Number: (*)</string>
    <string name="address">Address: (*)</string>
    <string name="title">Title: (*)</string>
    <string name="general_description">General Description: (*)</string>
    <string name="add_assistant">Add the Assistant</string>
    <string name="delete_assistant">Delete the Assistant</string>
    <string name="update_assistant">Update the Assistant</string>
    <string name="rb_weight">Weight</string>
    <string name="rb_energy">Energy</string>
    <string name="breed">Breed:</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="rb_meals">Meals</string>
    <string name="meal">Meal</string>
    <string name="rb_exercise">Exercise</string>
    <string name="spayed_neutered">Spayed/Neutered</string>
    <string name="add_fitness_goal">Add Fitness Goal</string>
    <string name="new_fitness_goal">New Fitness Goal</string>
    <string name="update_fitness_goal">Update Fitness Goal</string>
    <string name="delete_fitness_goal">Delete Fitness Goal</string>
    <string name="target_weight">Target Weight (lbs): (*)</string>
    <string name="target_energy">Target Energy Level: (*)</string>
    <string name="target_exercise_duration">Target Duration: (*)</string>
    <string name="target_exercise_duration_hint">Enter number of minutes</string>
    <string name="target_exercise_type">Exercise Type: (*)</string>
    <string name="hintForWeight">Enter in Pounds (lbs)</string>
    <string name="add">Add</string>
    <string name="time">Time</string>
    <string name="change_pet_details">Change Pet Details</string>
    <string name="excrement">Excrement</string>
    <string name="added_previously">Added Previously:</string>

    <!--Graph Labels-->
        <string name="date">Date</string>
        <string name="amount">Amount</string>
        <string name="duration">Duration (mins)</string>
        <string name="energy_level">Energy Level</string>
        <string name="weight">Weight (lbs)</string>
        <string name="abnormalities">Abnormalities</string>

    <!--Fragment Titles-->
        <string name="pet_fragment_title">Pets</string>
        <string name="assistant_fragment_title">Assistants</string>
        <string name="weight_fragment_title">Weight</string>
        <string name="meal_fragment_title">Meal</string>
        <string name="exercise_fragment_title">Exercise</string>
        <string name="energy_fragment_title">Energy</string>
        <string name="excrement_fragment_title">Excrement</string>

    <!--Database Strings-->
        <string name="db_name">DB_PuppyPal</string>

        <!--Assistant-->
            <string name="assistant_table_name">tbl_assistant</string>
            <string name="assistant_table_pk">assistant_id</string>
            <string-array name="assistant_columns">
                <item>name</item>
                <item>phone_number</item>
                <item>address</item>
                <item>title</item>
                <item>general_description</item>
            </string-array>

        <!--Energy-->
            <string name="energy_table_name">tbl_energy</string>
            <string name="energy_pk">energy_level_id</string>
            <string-array name="energy_columns">
                <item>date</item>
                <item>energy_level</item>
            </string-array>

        <!--Excrement-->
            <string name="excrement_table_name">tbl_excrement</string>
            <string name="excrement_pk">excrement_id</string>
            <string-array name="excrement_columns">
                <item>date</item>
                <item>abnormalities</item>
            </string-array>

        <!--Exercise-->
            <string name="exercise_table_name">tbl_exercise</string>
            <string name="exercise_pk">exercise_id</string>
            <string-array name="exercise_columns">
                <item>date</item>
                <item>type</item>
                <item>duration</item>
            </string-array>

        <!--Fitness-->
            <string name="fitness_table_name">tbl_fitness_goal</string>
            <string name="fitness_pk">fitness_goal_id</string>
            <string-array name="fitness_columns">
                <item>target_weight</item>
                <item>target_energy_level</item>
                <item>target_exercise_type</item>
                <item>target_exercise_duration</item>
            </string-array>

        <!--Meal-->
            <string name="meal_table_name">tbl_meal</string>
            <string name="meal_pk">meal_id</string>
            <string-array name="meal_columns">
                <item>date</item>
                <item>amount</item>
            </string-array>

        <!--Pet-->
            <string name="pet_table_name">tbl_pet</string>
            <string name="pet_pk">pet_id</string>
            <string-array name="pet_columns">
                <item>name</item>
                <item>age</item>
                <item>breed</item>
                <item>gender</item>
                <item>spayed_neutered</item>
            </string-array>

        <!--Weight-->
            <string name="weight_table_name">tbl_weight</string>
            <string name="weight_pk">weight_id</string>
            <string-array name="weight_columns">
                <item>date</item>
                <item>weight</item>
            </string-array>
    <!--End of Database Strings-->

</resources>