<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E4D0"
    tools:context=".MainActivity">

    <!--
    <ImageView
        android:id="@+id/imageViewMainPage"
        android:layout_width="325dp"
        android:layout_height="254dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="124dp"
        android:background="#80D1C1ED"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mainpageimage" />
-->

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/goToAddPet4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphType" />

    <TextView
        android:id="@+id/puppyPalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToAddRecord"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="AddRecordButton"
        android:text="@string/add_record"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/goToAddPet"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="AddPetButton"
        android:text="@string/add_a_pet"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/goToAddRecord"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addAnAssistant"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="AddAssistantButton"
        android:text="@string/add_an_assistant"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editAnAssistant"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/goToAddPet4"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:onClick="EditPetButton"
        android:text="@string/edit_a_pet"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/goToAddPet"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editAnAssistant"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:onClick="EditAssistantButton"
        android:text="@string/edit_an_assistant"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/goToAddFitnessGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="16dp"
        android:onClick="AddFitnessGoalButton"
        android:text="@string/add_fitness_goal"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/graphType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puppyPalTextView">

        <RadioButton
            android:id="@+id/weightGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="ChangeGraph"
            android:text="@string/weight" />

        <RadioButton
            android:id="@+id/exerciseGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ChangeGraph"
            android:text="Exercise" />

        <RadioButton
            android:id="@+id/mealGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ChangeGraph"
            android:text="Meals" />

        <RadioButton
            android:id="@+id/energyGraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ChangeGraph"
            android:text="Energy" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>